# unixevents_py

./: .gitignore  README.md  client.py  example.py  pyproject.toml  server.py  unixevents.py
src/: client.py  server.py  unit_test.py  unixevents.py
src/unixevents/: __init__.py  unixevents.py
tests/: client.py  test.py  unit_test.py
