[project]
name = "unixevents"
version = "0.0.1"
authors = [
  { name="Rohit Singh", email="rohsins@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["unixevents", "events", "ipc", "communication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rohsins/unixevents-py"
Issues = "https://github.com/rohsins/unixevents-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["src/unixevents"]

[tool.hatch.build.targets.sdist]
include = [
	"/src/unixevents",
	"/README.md",
	"/LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/unixevents"]

